<resources>
    <string name="app_name">Áhítat</string>

    <string name="navigation_drawer_open">Főmenü kinyitása</string>
    <string name="navigation_drawer_close">Főmenü bezárása</string>

    <string name="description">Áhítat-applikáció</string>

    <string name="main_app__activity_title">Napi áhítatok</string>
    <string name="menudescription">A Romániai Magyar Baptista Szövetség áhítata</string>
    <string name="searchbydate">Dátum szerint</string>
    <string name="search">Keresés</string>
    <string name="favorites">Kedvencek</string>
    <string name="share">Megosztás</string>
    <string name="logodescription">Áhítat logó</string>
    <string name="previous">Előző nap</string>
    <string name="next">Következő nap</string>
    <string name="cancel">Mégse</string>
    <string name="ok">Beállít</string>
    <string name="ok2">Igen</string>
    <string name="choice">Választ</string>
    <string name="datesettingerror">Hiba történt a dátum beállításnál!!!</string>
    <string name="dateiniterror">Hiba történt a dátum inicializálásánál!!!</string>
    <string name="shareactual">Áhitat megosztása</string>
    <string name="sharetypetitle">ÁHÍTAT MEGOSZTÁSA</string>
    <string name="sharedtitle">Áhítat megosztása</string>
    <string name="nosharedapp">Nincs telepítve megosztásra alkalmas alkalmazás</string>
    <string name="areyousure">Biztosan törölni szeretné a kijelölt kedvence(ke)t?</string>
    <string name="deletetitle">TÖRLÉS MEGERŐSÍTÉSE</string>

    <string name="deletefromfavorites">Törlés</string>
    <string name="addtofavorites">Kedvencek</string>
    <string name="biblia">Biblia</string>

    <string name="actual_date">Aktuális dátum</string>
    <string name="heading">Fejléc</string>

    <string name="amheading">DÉLELŐTTI SOROZAT</string>
    <string name="amverse">de. ige</string>
    <string name="amtitle">de. cím</string>
    <string name="amdailydevotion">de. áhitat</string>
    <string name="amdevotionauthor">de. szerző</string>
    <string name="pmheading">DÉLUTÁNI SOROZAT</string>
    <string name="pmtitle">du. cím</string>
    <string name="pmverse">du. ige</string>
    <string name="pmdailydevotion">du. ahitat</string>
    <string name="pmdevotionauthor">du. szerző</string>
    <string name="biblestudy">bibliaóra</string>
    <string name="prayer">imaóra</string>
    <string name="dailydevotion">Mai áhítat</string>
    <string name="dailydevotiontitle">MAI ÁHÍTAT</string>

    <string-array name="hungarian_month_names">
        <item>Január</item>
        <item>Február</item>
        <item>Március</item>
        <item>Április</item>
        <item>Május</item>
        <item>Június</item>
        <item>Július</item>
        <item>Augusztus</item>
        <item>Szeptember</item>
        <item>Október</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="hungarian_day_names">
        <item>Vasárnap</item>
        <item>Hétfő</item>
        <item>Kedd</item>
        <item>Szerda</item>
        <item>Csütörtök</item>
        <item>Péntek</item>
        <item>Szombat</item>
    </string-array>

    <string-array name="daily_devotion_choice_items">
        <item>Délelőtt</item>
        <item>Délután</item>
    </string-array>

    <string name="pref_header_general">Általános</string>

    <string name="pref_title_social_recommendations">Enable social recommendationsA</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Megjelenített név</string>
    <string name="pref_default_display_name">RMBGYSZ</string>

    <string name="pref_title_add_friends_to_messages">Ismerősök hozzáadása</string>
    <string-array name="pref_example_list_titles">
        <item>Mindig</item>
        <item>Ha lehetséges</item>
        <item>Soha</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notfounddailydevotion">Nincs áhítat a kijelölt napra! Törölje a gyorsítótárat!</string>
    <string name="title_activity_help">Segítség</string>
    <string name="title_activity_info">Az Áhítatról</string>

    <string name="help_title1">FEJLÉC</string>
    <string name="help_title2">FŐMENÜ</string>
    <string name="help_title3">VISSZAJELZÉS</string>
    <string name="help_title4">INDÍTÁS</string>
    <string name="help_content1">Az Áhítat csak 4.3-as, vagy annál újabb verziószámú Android rendszeren használható.\n\nAz applikáció az induló képernyőn található \u00A0{ahitat-ujj 120%}\u00A0 ikon érintésével <b>indul</b>. Induláskor az aktuális dátum szerinti áhítat jelenik meg. A <b>főmenü</b> a bal felső sarokban lévő \u00A0{ahitat-menu 120%}\u00A0 ikonra kattintva érhető el. A jobb alsó sarokban található <b>„+”</b> gombbal elérhetővé válik egy <b>navigációs menü</b>, melynek segítségével naponként lehet visszafele, illetve előre lépni.\n</string>
    <string name="help_content2"><b>MAI ÁHÍTAT</b>\n\nA \u00A0{ahitat-bookopenvariant 120%}\u00A0 MAI ÁHÍTAT menüpont az aktuális (mai) napi áhítatot állítja be.\n</string>
    <string name="help_content3"><b>DÁTUM SZERINT</b>\n\nA \u00A0{ahitat-calendar 120%}\u00A0 DÁTUM SZERINT menüpont alatt felugró dátumválasztó naptár segítségével hosszabb időtávon belül lehet elmélkedést választani.\n</string>
    <string name="help_content4"><b>KEDVENCEK</b>\n\nA MAI ÁHITAT menüpontban beállított kedvenceket itt lehet megtekinteni, törölni, valamint (érintésre) az elmentett áhítatra navigálni.\n</string>
    <string name="help_content5"><b>MEGOSZTÁS</b>\n\nA \u00A0{ahitat-myshare 120%}\u00A0 MEGOSZTÁS menüpont az előzőleg kiválasztott áhítat <b>megosztását</b> teszi lehetővé az eszközre telepített - megosztásra alkalmas - applikációkkal. Megosztáskor meg lehet jelölni, hogy a délelőtti, vagy a délutáni sorozat áhítat-bejegyzését szeretné megosztani a felhasználó.\n</string>
    <string name="help_content6">Az applikációval kapcsolatos észrevételeket, hibabejelentéseket az <a href="mailto:ahitatapp@gmail.com">ahitatapp@gmail.com</a> email címre várjuk.\n</string>
    <string name="help_content7">A fejléc jobb felső sarkában látható \u00A0{ahitat-book 120%}\u00A0 ikont érintve a <b>bibliamindenkie.hu</b> internetoldalra navigál az alkalmazás, ahol két magyar <b>bibliafordítás</b> is elérhető. A mellette látható \u00A0{ahitat-heart 120%}\u00A0 ikonnal lehet az aktuális áhítatot <b>kedvencként</b> beállítani.\n</string>
    <string name="info_title">KÖSZÖNETNYILVÁNÍTÁS</string>
    <string name="info_versiontitle">VERZIÓSZÁM:</string>
    <string name="info_content">Az Áhítat-applikáció a Romániai Magyar Baptista Szövetség gondozásában megjelenő nyomtatott elmélkedések mobilváltozata.\n\nAz Áhítat szerzői erdélyi, valamint részben magyarországi és amerikai baptista lelkipásztorok és lelki munkások.\n\nA borítófotót Paniti Márta készítette Torockón. Háttérben a Székelykő.\n</string>
    <string name="info_content1">Köszönjük a <b><i>Hungarian Baptist Mission</i></b>-nek (HBM), és vezetőjének <b><i>Kui Barnabás</i></b>nak az anyagi támogatást. Nélkülük nem jött volna létre ez az alkalmazás!\n</string>
</resources>