<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gz.rmbgysz.ahitat.MainAppActivity"
    tools:showIn="@layout/app_bar_main_app">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/main_app_linear_layout">

        <TextView
            android:text="@string/actual_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:id="@+id/actual_date" />

        <TextView
            android:id="@+id/delelott"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/half_colorAccent"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/amheading"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:text="@string/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/amTitle" />

        <TextView
            android:text="@string/amverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:id="@+id/amVerse"/>

        <TextView
            android:text="@string/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="15.5sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:lineSpacingMultiplier="1.1"
            android:ems="14"
            android:id="@+id/amDailyDevotion" />

        <TextView
            android:text="@string/amdevotionauthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic"
            android:gravity="end"
            android:lineSpacingMultiplier="1.1"
            android:ems="14"
            android:id="@+id/amDailyDevotionAuthor" />

        <TextView
            android:id="@+id/bibleLecture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fekete30"
            android:lineSpacingMultiplier="1.1"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:text="@string/biblestudy"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/prayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fekete30"
            android:lineSpacingMultiplier="1.1"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:text="@string/prayer"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/delutan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/half_colorAccent"
            android:padding="3dp"
            android:text="@string/pmheading"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="16sp" />

        <TextView
            android:text="@string/pmtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/pmTitle" />

        <TextView
            android:text="@string/pmverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="15.5sp"
            android:textStyle="italic"
            android:id="@+id/pmVerse" />

        <TextView
            android:text="@string/pmdailydevotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:lineSpacingMultiplier="1.1"
            android:ems="14"
            android:id="@+id/pmDailyDevotion" />

        <TextView
            android:text="@string/pmdevotionauthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/content_main_app_vertical_margin"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic"
            android:gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:lineSpacingMultiplier="1.1"
            android:ems="14"
            android:id="@+id/pmDailyDevotionAuthor" />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
